--- a/multiple-entry/package.json
+++ b/multiple-entry/package.json
@@ -61,6 +61,7 @@
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "mint-ui": "^2.2.7",
     "mocha": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
